@@ -5,6 +5,7 @@ Git 1.5.x
 ------------------------------------------------------------------------------------------------------------------------
 
 YOUTRACK
+    IP-1785 Exception in circular email feature (admin interface)
     IP-1786 Customer assignment (to reseller) not showing all clients
 
 ------------------------------------------------------------------------------------------------------------------------
